--- a/customer.html
+++ b/customer.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>My Account | Tassel Studio</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- DataTables for better tables -->
