--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <title>Tassel Hair & Beauty Studio | Where Kiddies Hair Meets Luxury Family Beauty</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/png" href="./favicon.png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
