--- a/staff.html
+++ b/staff.html
@@ -459,6 +459,10 @@
                         <input type="email" id="profile-email" class="form-control"
                             style="width:100%; padding:10px; border:1px solid #ddd; border-radius:4px;">
                     </div>
+                        <div class="form-group">
+                            <label>Phone Number</label>
+                            <input type="tel" id="profile-phone" class="form-control" placeholder="+27 82 345 6789">
+                        </div>
                     <hr style="margin:1.5rem 0; border:0; border-top:1px solid #eee;">
                     <p style="font-size:0.9rem; color:#888; margin-bottom:1rem;">Leave password fields blank to keep
                         current password</p>
