--- a/customer.html
+++ b/customer.html
@@ -643,6 +643,10 @@
                         <label>Email Address</label>
                         <input type="email" id="profile-email" class="form-control" required>
                     </div>
+                    <div class="form-group">
+                        <label>Phone Number</label>
+                        <input type="tel" id="profile-phone" class="form-control" placeholder="+27 82 345 6789">
+                    </div>
                     <hr>
                     <p style="font-size:0.9rem; color:#888; margin-bottom:1rem;">Leave password fields blank to keep current password</p>
                     <div class="form-group">
