--- a/index.html
+++ b/index.html
@@ -985,11 +985,34 @@
         </div>
     </div>
 
+    <!-- Shopping Cart Sidebar -->
+    <div id="cart-sidebar" class="cart-sidebar">
+        <div class="cart-header">
+            <h3>Your Cart <span class="cart-count">0</span></h3>
+            <button id="cart-close" class="cart-close-btn">&times;</button>
+        </div>
+        <div id="cart-items" class="cart-items"></div>
+        <div class="cart-footer">
+            <div class="cart-total">
+                <span>Total:</span>
+                <span id="cart-total">R0.00</span>
+            </div>
+            <div class="cart-actions">
+                <button id="checkout-btn" class="btn btn-primary">Proceed to Checkout</button>
+                <button id="cart-whatsapp" class="btn btn-outline">Order via WhatsApp</button>
+                <button class="btn btn-outline" onclick="tasselCart.clearCart()">Clear Cart</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Cart Toggle Button -->
     <button id="cart-toggle" class="cart-toggle">
         <i class="fas fa-shopping-cart"></i>
         <span class="cart-count">0</span>
     </button>
+
+    <!-- Include shop.js -->
+    <script src="./shop.js"></script>
 
     <!-- Include cart.js -->
     <script src="./cart.js"></script>
