--- a/index.html
+++ b/index.html
@@ -282,17 +282,17 @@
         </div>
     </section>
 
-    <!-- Products Preview Section (Public) -->
+    <!-- Products Section -->
     <section id="products-section" class="products">
         <div class="container">
             <div class="section-header">
                 <span class="section-label">Our Products</span>
-                <h2 class="section-title">Shop Our Recommended Products</h2>
-                <p class="section-description">Browse featured products available at the studio</p>
+                <h2 class="section-title">Shop Our Collection</h2>
+                <p class="section-description">Premium beauty products for your self-care routine</p>
             </div>
 
             <div id="products-list" class="products-grid">
-                <!-- Product cards will be injected here by scripts.js -->
+                <!-- Products will be loaded dynamically -->
             </div>
         </div>
     </section>
