Social Media Contact Updated

--- a/index.html
+++ b/index.html
@@ -796,9 +796,13 @@
                         for the whole family in Glenvista.
                     </p>
                     <div class="footer-social">
-                        <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://web.facebook.com/tasselbeautyandwellnessstudio/" class="social-link"><i
+                                class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/tasselbeautyandwellnessstudio/" class="social-link"><i
+                                class="fab fa-instagram"></i></a>
+                        <a href="https://www.tiktok.com/@tasselgroup" class="social-link"><i
+                                class="fab fa-tiktok"></i></a>
+                        <a href="https://wa.me/27729605153" class="social-link"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
 
