--- a/index.html
+++ b/index.html
@@ -391,25 +391,32 @@
                         <li><a href="#home" class="nav-link active">Home</a></li>
                         <li><a href="#about" class="nav-link">About</a></li>
                         <li><a href="#services" class="nav-link">Services</a></li>
-                        <li><a href="#featured-products" class="nav-link">Shop</a></li>
+                        <!-- Shop link changes based on login -->
+                        <li id="shop-nav-item"><a href="shop.html" class="nav-link" id="shop-nav-link">Shop</a></li>
                         <li><a href="#testimonials" class="nav-link">Testimonials</a></li>
                         <li><a href="#contact" class="nav-link">Contact</a></li>
                     </ul>
 
                     <div class="nav-actions">
+                        <!-- Show these when logged OUT -->
                         <button class="btn btn-outline" id="login-btn">
                             <i class="fas fa-user"></i> Login
                         </button>
+                        <button class="btn btn-primary" id="register-nav-btn"
+                            onclick="document.getElementById('register-modal').classList.add('active')">
+                            <i class="fas fa-user-plus"></i> Join Free
+                        </button>
+
+                        <!-- Show these when logged IN -->
                         <button class="btn btn-outline" id="logout-btn" style="display: none;">
                             <i class="fas fa-sign-out-alt"></i> Logout
                         </button>
                         <button class="btn btn-primary" id="dashboard-btn" style="display: none;">
                             <i class="fas fa-th-large"></i> Dashboard
                         </button>
-                        <button class="btn btn-primary" id="register-nav-btn"
-                            onclick="document.getElementById('register-modal').classList.add('active')">
-                            <i class="fas fa-user-plus"></i> Join Free
-                        </button>
+                        <a href="shop.html" class="btn btn-outline" id="shop-nav-btn" style="display: none;">
+                            <i class="fas fa-shopping-bag"></i> Shop
+                        </a>
                     </div>
 
                     <button class="mobile-toggle" id="mobile-toggle">
@@ -1024,6 +1031,7 @@
     </button>
 
     <!-- Scripts -->
+    <script src="./auth-nav.js"></script>
     <script src="./cart.js"></script>
     <script src="./scripts.js"></script>
     <script>
