--- a/shop.html
+++ b/shop.html
@@ -21,9 +21,8 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <!-- Styles -->
     <link rel="stylesheet" href="styles.css">
-
+    <script src="./auth-nav.js"></script>
     <script src="./shop-auth.js"></script>
 
     <style>
